--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -55,7 +55,7 @@
      "output_type": "stream",
      "text": [
       "Esecuzione completa del processo di previsione serie temporale\n",
-      "info - Preparazione dati per previsione serie temporale\n",
+      "Preparazione dati per previsione serie temporale\n",
       "len di X_train: 1959, len di X_test: 490, len di y_test: 490, len di y_train: 1959\n",
       "Shape di X_train: (1959, 60, 1)\n",
       "Shape di X_test: (490, 60, 1)\n",
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 103ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 104ms/step\n"
      ]
     },
     {
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step\n"
      ]
     },
     {
@@ -105,9 +105,9 @@
     {
      "data": {
       "text/plain": [
-       "{'predictions': array([211.49197, 212.10646, 213.5238 , 215.1042 , 216.61337],\n",
+       "{'predictions': array([213.51903, 214.67932, 216.96324, 219.6788 , 222.48787],\n",
        "       dtype=float32),\n",
-       " 'mae': np.float64(4.016610717773437)}"
+       " 'mae': np.float64(5.399652099609375)}"
       ]
      },
      "execution_count": 4,
@@ -120,54 +120,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[211.49197 212.10646 213.5238  215.1042  216.61337]\n"
-     ]
-    }
-   ],
    "source": [
-    "# Supponendo che 'predictions' sia il tuo array di previsioni\n",
-    "predictions = pred['predictions']\n",
-    "\n",
-    "# Converti l'array in un array monodimensionale\n",
-    "predictions_monodimensionale = predictions.flatten()\n",
-    "\n",
-    "print(predictions_monodimensionale)\n"
+    "### Prossimi step:\n",
+    "#### - individuazione titolo sottovalutato o sopravvalutato\n",
+    "#### - previsione con piu features (?)\n",
+    "#### - sentiment analysis\n",
+    "#### - tutta la parte di gestione e ottimizazzione di portafoglio"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(predictions_monodimensionale)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
