--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,8 +12,7 @@
     "import sys\n",
     "sys.path.append(r'C:\\Users\\loren\\OneDrive\\Desktop\\Workbench\\stock-project')\n",
     "from src.extract.extract import DataExtract\n",
-    "from src.model.lstm_pred import TimeSeriesPredictor\n",
-    "from src.model.lstm_multi_features import MultiFeatureTimeSeriesPredictor\n"
+    "from src.model.lstm_pred import TimeSeriesPredictor\n"
    ]
   },
   {
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,200 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>Price</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>ADJ_NORMALIZE</th>\n",
-       "      <th>EWM_12</th>\n",
-       "      <th>EWM_26</th>\n",
-       "      <th>RSI</th>\n",
-       "      <th>MACD</th>\n",
-       "      <th>MACD_signal</th>\n",
-       "      <th>MACD_hist</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>IBM</th>\n",
-       "      <th>IBM</th>\n",
-       "      <th>IBM</th>\n",
-       "      <th>IBM</th>\n",
-       "      <th>IBM</th>\n",
-       "      <th>IBM</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2024-12-09</th>\n",
-       "      <td>230.000000</td>\n",
-       "      <td>230.000000</td>\n",
-       "      <td>239.350006</td>\n",
-       "      <td>228.910004</td>\n",
-       "      <td>238.000000</td>\n",
-       "      <td>4970400</td>\n",
-       "      <td>0.951417</td>\n",
-       "      <td>228.181494</td>\n",
-       "      <td>223.103530</td>\n",
-       "      <td>59.976120</td>\n",
-       "      <td>5.077964</td>\n",
-       "      <td>3.547800</td>\n",
-       "      <td>1.530165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-10</th>\n",
-       "      <td>231.720001</td>\n",
-       "      <td>231.720001</td>\n",
-       "      <td>234.389999</td>\n",
-       "      <td>227.800003</td>\n",
-       "      <td>228.399994</td>\n",
-       "      <td>4769500</td>\n",
-       "      <td>0.961810</td>\n",
-       "      <td>228.725880</td>\n",
-       "      <td>223.741787</td>\n",
-       "      <td>61.816086</td>\n",
-       "      <td>4.984093</td>\n",
-       "      <td>3.835059</td>\n",
-       "      <td>1.149034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-11</th>\n",
-       "      <td>230.119995</td>\n",
-       "      <td>230.119995</td>\n",
-       "      <td>233.000000</td>\n",
-       "      <td>229.130005</td>\n",
-       "      <td>232.690002</td>\n",
-       "      <td>3872700</td>\n",
-       "      <td>0.952142</td>\n",
-       "      <td>228.940359</td>\n",
-       "      <td>224.214247</td>\n",
-       "      <td>59.094541</td>\n",
-       "      <td>4.726112</td>\n",
-       "      <td>4.013269</td>\n",
-       "      <td>0.712843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-12</th>\n",
-       "      <td>232.259995</td>\n",
-       "      <td>232.259995</td>\n",
-       "      <td>233.889999</td>\n",
-       "      <td>230.380005</td>\n",
-       "      <td>230.660004</td>\n",
-       "      <td>4515700</td>\n",
-       "      <td>0.965073</td>\n",
-       "      <td>229.451072</td>\n",
-       "      <td>224.810228</td>\n",
-       "      <td>61.533863</td>\n",
-       "      <td>4.640844</td>\n",
-       "      <td>4.138784</td>\n",
-       "      <td>0.502060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-13</th>\n",
-       "      <td>230.820007</td>\n",
-       "      <td>230.820007</td>\n",
-       "      <td>233.779999</td>\n",
-       "      <td>230.259995</td>\n",
-       "      <td>232.250000</td>\n",
-       "      <td>2757400</td>\n",
-       "      <td>0.956372</td>\n",
-       "      <td>229.661678</td>\n",
-       "      <td>225.255397</td>\n",
-       "      <td>58.984929</td>\n",
-       "      <td>4.406281</td>\n",
-       "      <td>4.192284</td>\n",
-       "      <td>0.213997</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Price        Adj Close       Close        High         Low        Open  \\\n",
-       "Ticker             IBM         IBM         IBM         IBM         IBM   \n",
-       "Date                                                                     \n",
-       "2024-12-09  230.000000  230.000000  239.350006  228.910004  238.000000   \n",
-       "2024-12-10  231.720001  231.720001  234.389999  227.800003  228.399994   \n",
-       "2024-12-11  230.119995  230.119995  233.000000  229.130005  232.690002   \n",
-       "2024-12-12  232.259995  232.259995  233.889999  230.380005  230.660004   \n",
-       "2024-12-13  230.820007  230.820007  233.779999  230.259995  232.250000   \n",
-       "\n",
-       "Price        Volume ADJ_NORMALIZE      EWM_12      EWM_26        RSI  \\\n",
-       "Ticker          IBM                                                    \n",
-       "Date                                                                   \n",
-       "2024-12-09  4970400      0.951417  228.181494  223.103530  59.976120   \n",
-       "2024-12-10  4769500      0.961810  228.725880  223.741787  61.816086   \n",
-       "2024-12-11  3872700      0.952142  228.940359  224.214247  59.094541   \n",
-       "2024-12-12  4515700      0.965073  229.451072  224.810228  61.533863   \n",
-       "2024-12-13  2757400      0.956372  229.661678  225.255397  58.984929   \n",
-       "\n",
-       "Price           MACD MACD_signal MACD_hist  \n",
-       "Ticker                                      \n",
-       "Date                                        \n",
-       "2024-12-09  5.077964    3.547800  1.530165  \n",
-       "2024-12-10  4.984093    3.835059  1.149034  \n",
-       "2024-12-11  4.726112    4.013269  0.712843  \n",
-       "2024-12-12  4.640844    4.138784  0.502060  \n",
-       "2024-12-13  4.406281    4.192284  0.213997  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.tail()"
    ]
@@ -260,27 +59,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "info - start forecast\n",
+      "Preparazione dati per previsione serie temporale\n",
+      "Preparazione dati completata\n",
+      "GridSearch non eseguito, utilizzo parametri predefiniti\n",
+      "Preparazione dati per previsione serie temporale\n",
+      "Preparazione dati completata\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 103ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DONE! - forecast successfully\n"
+     ]
+    }
+   ],
    "source": [
     "pred = TimeSeriesPredictor(df).call()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'predictions': array([229.91722, 230.12195, 231.19283, 232.48735, 233.28133],\n",
-       "       dtype=float32),\n",
-       " 'mae': np.float64(1.9806640625)}"
+       "{'IBM': {'predictions': array([234.33505, 235.71422, 236.08405, 236.08261, 236.00089],\n",
+       "        dtype=float32),\n",
+       "  'mae': np.float64(4.6973419189453125)}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
