--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,9 +43,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>ADJ_NORMALIZE</th>\n",
+       "      <th>EWM_12</th>\n",
+       "      <th>EWM_26</th>\n",
+       "      <th>RSI</th>\n",
+       "      <th>MACD</th>\n",
+       "      <th>MACD_signal</th>\n",
+       "      <th>MACD_hist</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-12-06</th>\n",
+       "      <td>238.039993</td>\n",
+       "      <td>238.039993</td>\n",
+       "      <td>238.380005</td>\n",
+       "      <td>234.220001</td>\n",
+       "      <td>234.429993</td>\n",
+       "      <td>4028400</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>227.933463</td>\n",
+       "      <td>222.975437</td>\n",
+       "      <td>74.700647</td>\n",
+       "      <td>4.958026</td>\n",
+       "      <td>2.779345</td>\n",
+       "      <td>2.178680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-09</th>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>239.350006</td>\n",
+       "      <td>228.910004</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>4970400</td>\n",
+       "      <td>0.951249</td>\n",
+       "      <td>228.251392</td>\n",
+       "      <td>223.495775</td>\n",
+       "      <td>59.275996</td>\n",
+       "      <td>4.755616</td>\n",
+       "      <td>3.174600</td>\n",
+       "      <td>1.581017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-10</th>\n",
+       "      <td>231.720001</td>\n",
+       "      <td>231.720001</td>\n",
+       "      <td>234.389999</td>\n",
+       "      <td>227.800003</td>\n",
+       "      <td>228.399994</td>\n",
+       "      <td>4769500</td>\n",
+       "      <td>0.961678</td>\n",
+       "      <td>228.785024</td>\n",
+       "      <td>224.104977</td>\n",
+       "      <td>61.125330</td>\n",
+       "      <td>4.680047</td>\n",
+       "      <td>3.475689</td>\n",
+       "      <td>1.204358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-11</th>\n",
+       "      <td>230.119995</td>\n",
+       "      <td>230.119995</td>\n",
+       "      <td>233.000000</td>\n",
+       "      <td>229.130005</td>\n",
+       "      <td>232.690002</td>\n",
+       "      <td>3872700</td>\n",
+       "      <td>0.951976</td>\n",
+       "      <td>228.990404</td>\n",
+       "      <td>224.550534</td>\n",
+       "      <td>58.465569</td>\n",
+       "      <td>4.439870</td>\n",
+       "      <td>3.668525</td>\n",
+       "      <td>0.771345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-12</th>\n",
+       "      <td>232.259995</td>\n",
+       "      <td>232.259995</td>\n",
+       "      <td>233.889999</td>\n",
+       "      <td>230.380005</td>\n",
+       "      <td>230.660004</td>\n",
+       "      <td>4515700</td>\n",
+       "      <td>0.964952</td>\n",
+       "      <td>229.493418</td>\n",
+       "      <td>225.121605</td>\n",
+       "      <td>60.915229</td>\n",
+       "      <td>4.371813</td>\n",
+       "      <td>3.809183</td>\n",
+       "      <td>0.562630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-13</th>\n",
+       "      <td>230.820007</td>\n",
+       "      <td>230.820007</td>\n",
+       "      <td>233.779999</td>\n",
+       "      <td>230.259995</td>\n",
+       "      <td>232.250000</td>\n",
+       "      <td>2757400</td>\n",
+       "      <td>0.956221</td>\n",
+       "      <td>229.697509</td>\n",
+       "      <td>225.543709</td>\n",
+       "      <td>58.418466</td>\n",
+       "      <td>4.153800</td>\n",
+       "      <td>3.878106</td>\n",
+       "      <td>0.275693</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price        Adj Close       Close        High         Low        Open  \\\n",
+       "Ticker             IBM         IBM         IBM         IBM         IBM   \n",
+       "Date                                                                     \n",
+       "2024-12-06  238.039993  238.039993  238.380005  234.220001  234.429993   \n",
+       "2024-12-09  230.000000  230.000000  239.350006  228.910004  238.000000   \n",
+       "2024-12-10  231.720001  231.720001  234.389999  227.800003  228.399994   \n",
+       "2024-12-11  230.119995  230.119995  233.000000  229.130005  232.690002   \n",
+       "2024-12-12  232.259995  232.259995  233.889999  230.380005  230.660004   \n",
+       "2024-12-13  230.820007  230.820007  233.779999  230.259995  232.250000   \n",
+       "\n",
+       "Price        Volume ADJ_NORMALIZE      EWM_12      EWM_26        RSI  \\\n",
+       "Ticker          IBM                                                    \n",
+       "Date                                                                   \n",
+       "2024-12-06  4028400      1.000000  227.933463  222.975437  74.700647   \n",
+       "2024-12-09  4970400      0.951249  228.251392  223.495775  59.275996   \n",
+       "2024-12-10  4769500      0.961678  228.785024  224.104977  61.125330   \n",
+       "2024-12-11  3872700      0.951976  228.990404  224.550534  58.465569   \n",
+       "2024-12-12  4515700      0.964952  229.493418  225.121605  60.915229   \n",
+       "2024-12-13  2757400      0.956221  229.697509  225.543709  58.418466   \n",
+       "\n",
+       "Price           MACD MACD_signal MACD_hist  \n",
+       "Ticker                                      \n",
+       "Date                                        \n",
+       "2024-12-06  4.958026    2.779345  2.178680  \n",
+       "2024-12-09  4.755616    3.174600  1.581017  \n",
+       "2024-12-10  4.680047    3.475689  1.204358  \n",
+       "2024-12-11  4.439870    3.668525  0.771345  \n",
+       "2024-12-12  4.371813    3.809183  0.562630  \n",
+       "2024-12-13  4.153800    3.878106  0.275693  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.tail()"
    ]
